# email_microservive

./: README.md  main.py  pyproject.toml  sonar-project.properties  test.compose.yml  test.dockerfile
.github/workflows/: ci.yml  sonar.yml  test.yml
tests/: test_email.py
