[tool.poetry]
name = "email_microservice"
version = "0.1.0"
description = ""
authors = ["AndreOliveira <andreaoliveira@ua.pt>"]
readme = "README.md"
packages = [
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
cryptography = "^43.0.1"
tox = "^4.21.2"
aio-pika = "^9.4.3"
pytest-asyncio = "^0.25.0"
python-barcode = "^0.15.1"
pillow = "^11.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.2"
pytest-cov = "^5.0.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"